# RecursiveFunctions

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  context.yaml  main.cpp  testing.sh
src/: CMakeLists.txt  Constants.h  FunctionTraits.h  RecursiveFunctions.h  concatenate.h
src/analysis/: Analyser.h  AnalysisManager.cpp  AnalysisManager.h
src/assembly/: AssemblyCompiler.cpp  AssemblyCompiler.h  AssemblyInstruction.h  AssemblyPrinter.cpp  AssemblyPrinter.h  GreedyBlocksOrdering.cpp  GreedyBlocksOrdering.h  InstructionPrinter.cpp  InstructionPrinter.h
src/ast/: ASTBuildContext.cpp  ASTBuildContext.h  ASTBuildDeclarations.cpp  ASTBuildExpressions.cpp  ASTBuildStatements.cpp  ASTContext.h  ASTPrinter.h  ASTVisitor.h  Nodes.h  NodesList.h
src/cli/: ArgumentsReader.cpp  ArgumentsReader.h  Exceptions.h  ExceptionsHandler.h  Main.h  main.cpp
src/compilation/: BytecodePrinter.h  CompileTreeBuilder.cpp  CompileTreeBuilder.h  CompileTreeNodes.h  Compiler.h  DeclarationSpecifiers.h  FrontendConfiguration.h  GlobalContext.h  IdentifiersEnumerator.h  ImportASTVisitor.h  Instructions.h  ModuleCompileInfo.h  ModuleContext.h  QualifiedId.h  README.md  Scope.h  ScopePrinter.cpp  ScopePrinter.h  StringId.h  SymbolInfo.cpp  SymbolInfo.h  TeaFrontend.cpp  TeaFrontend.h  TypeASTVisitor.cpp  TypeASTVisitor.h
src/compilation/bytecode/: AssembleInstructions.cpp  AssemblyInstruction.h  BytecodeCompiler.h  CompileArgminCall.cpp  CompileAsterisk.cpp  CompileConstant.cpp  CompileFunctionCall.cpp  CompileFunctionDefinition.cpp  CompileInternalFunctionDefinition.cpp  CompileProgram.cpp  CompileRecursionParameter.cpp  CompileRecursiveFunctionDefinition.cpp  CompileSelfCall.cpp  CompileVariable.cpp
src/compilation/cpp/: CompileArgminCall.cpp  CompileAsterisk.cpp  CompileConstant.cpp  CompileFunctionCall.cpp  CompileFunctionDefinition.cpp  CompileInternalFunctionDefinition.cpp  CompileProgram.cpp  CompileRecursionParameter.cpp  CompileRecursiveFunctionDefinition.cpp  CompileSelfCall.cpp  CompileVariable.cpp  CppCompiler.h
src/compilation/functions/: Argmin.h  FastAbsoluteDifference.h  FastAdd.h  Successor.h
src/compilation/ir/: CompileBinaryOperator.cpp  CompileFunctionDeclaration.cpp  CompileProgramDeclaration.cpp  CompileReturnStatement.cpp  CompileVariableDeclaration.cpp  Context.cpp  Context.h  Function.cpp  Function.h  FunctionDecl.cpp  FunctionDecl.h  IRASTVisitor.cpp  IRASTVisitor.h  IRExpressions.cpp  IRGenerator.cpp  IRGenerator.h  IRHelpers.cpp  TypesMapper.cpp  TypesMapper.h  temp.cpp
src/compilation/mangling/: Mangler.cpp  Mangler.h
src/compilation/semantics/: AssignmentStatementAnalysis.cpp  CallExpressionAnalysis.cpp  ClassDeclarationAnalysis.cpp  CompoundStatementAnalysis.cpp  ExplicitUnsafeCastExpressionAnalysis.cpp  FunctionDeclarationAnalysis.cpp  IdExpressionAnalysis.cpp  IfStatementAnalysis.cpp  LiteralsAnalysis.cpp  MemberExprAnalysis.cpp  NameLookup.cpp  NamespaceDeclarationAnalysis.cpp  OperatorAnalysis.cpp  ParameterDeclarationAnalysis.cpp  ProgramAnalysis.cpp  SemanticAnalyzer.cpp  SemanticAnalyzer.h  TupleExpressionAnalysis.cpp  TupleIndexExpressionAnalysis.cpp  TypeAliasDeclarationAnalysis.cpp  TypesAnalalysis.cpp  VariableDeclarationAnalysis.cpp
src/compilation/types/: Type.cpp  Type.h  TypesASTVisitor.cpp  TypesASTVisitor.h  TypesStorage.cpp  TypesStorage.h
src/errors/: ExceptionsHandler.h  Helpers.cpp  Helpers.h
src/execution/: BytecodeExecutor.cpp  BytecodeExecutor.h
src/execution/debug/: CommandParser.h  DebugBytecodeExecutor.cpp  DebugBytecodeExecutor.h  DebugHelp.cpp  Exceptions.h  SafeArray.h
src/filesystem/: FilesystemManager.cpp  FilesystemManager.h
src/intermediate_representation/: BasicBlock.h  Function.cpp  Function.h  IRPrinter.cpp  IRPrinter.h  Instruction.h  Printer.cpp  Printer.h  Program.h  Temporary.h  Value.h
src/intermediate_representation/allocation/: DependenciesGraphBuilder.cpp  DependenciesGraphBuilder.h  RegisterAllocator.cpp  RegisterAllocator.h  TemporaryDependenciesGraph.h
src/intermediate_representation/compiler/: AssembleInstructions.cpp  CompileArgminCall.cpp  CompileArgminOperator.cpp  CompileAsterisk.cpp  CompileConstant.cpp  CompileExternFunctionDefinition.cpp  CompileFunctionCall.cpp  CompileFunctionDefinition.cpp  CompileInternalFunctionDefinition.cpp  CompileProgram.cpp  CompileRecursionParameter.cpp  CompileRecursiveFunctionDefinition.cpp  CompileSelfCall.cpp  CompileSuccessorOperator.cpp  CompileVariable.cpp  IRCompiler.h
src/intermediate_representation/optimizations/: Optimizer.cpp  Optimizer.h
src/intermediate_representation/types/: Type.h  TypesStorage.h
src/interpretation/: ASTInterpreter.cpp  ASTInterpreter.h
src/lexis/: CMakeLists.txt  Charset.h  Exceptions.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  Token.h  compile_lexis_table.cpp
src/lexis/automata/: FiniteAutomata.cpp  FiniteAutomata.h  FiniteAutomataPrinter.h  NonDeterministicFiniteAutomata.cpp  (+1 more)
src/log/: Logger.h
src/passes/: Pass.h  PassManager.cpp  PassManager.h
src/pipeline/: PipelineManager.h
src/preprocessor/: Exceptions.h  FileSource.h  Preprocessor.h  Source.h  TextSource.h
src/sources/: SourceLocation.h  SourceManager.cpp  SourceManager.h  SourcesLoader.cpp  SourcesLoader.h
src/syntax/: AdditionSyntax.h  CMakeLists.txt  Exceptions.h  RecursiveFunctionsGrammar.cpp  RecursiveFunctionsGrammar.h  RecursiveFunctionsSyntax.h  SyntaxConsumers.h  SyntaxNode.h  SyntaxTreeBuilder.h  compile_grammar.cpp  grammar.txt
src/syntax/lr/: LRParser.h  (+8 more)
src/utils/: Constants.h  Hashers.h  OneShotObject.h  PointersStorage.h  Printing.h  Serializer.h  SmartEnum.h  StringId.h  StringPool.h  TupleUtils.h
tests/: CMakeLists.txt  arithmetics.rec  bytecode  fast_arithmetics.rec  instructions_percentage  secret.rec  sum.rec  test.rec  testing_test.cpp
tests/feature/: ArgminTests.cpp  ArithmeticsTests.cpp  FastArithmeticsTests.cpp  IsPrimeTests.cpp  ProgramRunTestCase.h  ProgramRunTests.cpp  RunProgramsTests.cpp
tests/lit/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tests/unit/: CMakeLists.txt
(+216 files in other folders)
